log
Thu 20 Apr 2023 03:51:39 PM UTC: 
 treemap.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|8
total_score: 0/70
61116f3
Thu 20 Apr 2023 03:52:14 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  4|7
total_score: 5/70
a58c188
Thu 20 Apr 2023 03:58:11 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  5|7
total_score: 5/70
cf47969
Thu 20 Apr 2023 03:58:29 PM UTC: 
 treemap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  11|6
total_score: 15/70
5e5821f
Thu 20 Apr 2023 04:03:41 PM UTC: 
 treemap.c | 14 ++++++++++++++
 1 file changed, 14 insertions(+)
 tests:  0|0
a32a472
Thu 20 Apr 2023 04:09:41 PM UTC: 
 treemap.c | 21 +++++++++++++++++----
 1 file changed, 17 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:58:3: error: expected expression before ‘}’ token
   58 |   }
      |   ^
treemap.c:58:3: error: ‘return’ with a value, in function returning void [-Werror=return-type]
treemap.c:48:6: note: declared here
   48 | void insertTreeMap(TreeMap * tree, void* key, void * value) {
      |      ^~~~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
4595e44
Thu 20 Apr 2023 04:09:54 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|6
total_score: 15/70
5bda4d7
Thu 20 Apr 2023 04:12:18 PM UTC: 
 treemap.c | 19 +++++++++++++++----
 1 file changed, 15 insertions(+), 4 deletions(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:9: error: ‘true’ undeclared (first use in this function); did you mean ‘tree’?
   60 |   while(true){
      |         ^~~~
      |         tree
treemap.c:60:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
7a87224
Thu 20 Apr 2023 04:12:30 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:9: error: ‘True’ undeclared (first use in this function)
   60 |   while(True){
      |         ^~~~
treemap.c:60:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
e9e82d7
Thu 20 Apr 2023 04:12:34 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
treemap.c: In function ‘insertTreeMap’:
treemap.c:60:9: error: ‘true’ undeclared (first use in this function); did you mean ‘tree’?
   60 |   while(true){
      |         ^~~~
      |         tree
treemap.c:60:9: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
0e4c535
Thu 20 Apr 2023 04:12:45 PM UTC: 
 treemap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|6
total_score: 15/70
e1d4075
